@@ -1,5 +1,8 @@
 2003-11-28    <mschimek@users.sf.net>
 
+	* zapping_setup_fb/zapping_setup_fb.c (drop_root_privileges): 
+	  Cannot distiguish between root and consolehelper, warning
+	  removed.
 	* src/properties-handler.c (video_setup, video_apply): Fullscreen
 	  vidmode option only when xf86vmode available.
 	  (vbi_general_setup): VBI options only when libzvbi available.
